<resources>
    <string name="app_name">SEG Project</string>
    <string name="PasswordPlaceholder">Password</string>
    <string name="UsernamePlaceholder">Username</string>
    <string name="LastNamePlaceholder">Last Name</string>
    <string name="FirstNamePlaceholder">First Name</string>
    <string name="LoginButton">Login</string>
    <string name="SignUpButton">Sign Up</string>
    <string name="EmailPlaceholder">Email</string>
    <string name="manageServicesButton">Manage Services</string>
    <string name="clinicInformationButton">Clinic Information</string>
    <string name="insurancePaymentButton">Insurance/Payment Methods</string>
    <string name="enterAddressLabel">Address</string>
    <string name="enterPhoneLabel">Phone Number</string>
    <string name="enterNameLabel">Clinic Name</string>
    <string name="changeAddressButton">Change/Set Address</string>
    <string name="changePhoneButton">Change/Set Phone Number</string>
    <string name="changeNameButton">Change/Set Clinic Name</string>
    <string name="clinicWorkHoursButton">Clinic Work Hours</string>>
    <string name="startSearchingButton">Start Searching</string>
    <string name="searchHours">Hours</string>
    <string name="searchAddress">Address</string>
    <string name="searchServices">Service</string>
    <string name="goBack">Back</string>
</resources>
