<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constrainedHeight="false"
        app:layout_constrainedWidth="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/FirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30px"
            android:autofillHints=""
            android:ems="10"
            android:hapticFeedbackEnabled="false"
            android:hint="@string/FirstNamePlaceholder"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/LastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30px"
            android:ems="10"
            android:hint="@string/LastNamePlaceholder"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/RoleSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content" />

        <EditText
            android:id="@+id/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30px"
            android:layout_marginBottom="30px"
            android:ems="10"
            android:hint="@string/UsernamePlaceholder"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30px"
            android:ems="10"
            android:hint="@string/PasswordPlaceholder"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SignUpButton"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>