<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeClinicInformation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/backButtonEmployeeClinicInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="backClickHandler"
            android:text="Back" />

        <TextView
            android:id="@+id/enterAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/enterAddressLabel"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/currentAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Currently empty!"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/changeAddressButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="changeAddressClickHandler"
            android:text="@string/changeAddressButton" />

        <TextView
            android:id="@+id/enterPhoneLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/enterPhoneLabel"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/currentPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Currently empty!"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/changePhoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="changePhoneClickHandler"
            android:text="@string/changePhoneButton" />

        <TextView
            android:id="@+id/enterNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/enterNameLabel"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/currentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="Currently empty!"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/changeNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="changeNameClickHandler"
            android:text="@string/changeNameButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>