<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/backButtonEmployeePage"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:onClick="backClickHandler"
            android:text="Back"

            android:background="@drawable/ellipse"/>

        <Button
            android:id="@+id/manageServices"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="131dp"
            android:layout_marginRight="131dp"
            android:layout_marginBottom="40dp"
            android:onClick="manageServicesClickHandler"
            android:text="@string/manageServicesButton"
            android:background="@drawable/ellipse"/>

        <Button
            android:id="@+id/clinicInformation"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="122dp"
            android:layout_marginLeft="122dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="123dp"
            android:layout_marginRight="123dp"
            android:layout_marginBottom="59dp"
            android:onClick="clinicInformationClickHandler"
            android:text="@string/clinicInformationButton"
            android:background="@drawable/ellipse"/>

        <Button
            android:id="@+id/insurancePayment"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="83dp"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="84dp"
            android:onClick="acceptedInsurancePaymentClickHandler"
            android:text="@string/insurancePaymentButton"
            android:background="@drawable/ellipse"/>

        <Button
            android:id="@+id/clinicWorkHours"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="clinicWorkHoursClickHandler"
            android:text="@string/clinicWorkHoursButton"
            android:background="@drawable/ellipse"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>